月々の支払画面削除
