# document/api/swagger.yaml
@@ -1165,110 +1165,6 @@ paths:
         "500":
           $ref: "#/components/responses/InternalServerError"
 
-  "/monthly":
-    post:
-      summary: "月々の支払い登録"
-      description: "月々の支払いを登録する"
-      tags: ["others"]
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                house_rent:
-                  type: object
-                  nullable: true
-                  description: 家賃
-                  properties:
-                    amount:
-                      type: integer
-                      minimum: 1
-                      description: 金額
-                      example: 50000
-                    date:
-                      type: string
-                      description: 支払日
-                      example: "2024-02-27"
-                gas:
-                  type: object
-                  nullable: true
-                  description: ガス
-                  properties:
-                    amount:
-                      type: integer
-                      minimum: 1
-                      description: 金額
-                      example: 3000
-                    date:
-                      type: string
-                      description: 支払日
-                      example: "2024-02-15"
-                water:
-                  type: object
-                  nullable: true
-                  description: 水道
-                  properties:
-                    amount:
-                      type: integer
-                      minimum: 1
-                      description: 金額
-                      example: 2000
-                    date:
-                      type: string
-                      description: 支払日
-                      example: "2024-02-15"
-                elect:
-                  type: object
-                  nullable: true
-                  description: 電気
-                  properties:
-                    amount:
-                      type: integer
-                      minimum: 1
-                      description: 金額
-                      example: 5000
-                    date:
-                      type: string
-                      description: 支払日
-                      example: "2024-02-10"
-                net:
-                  type: object
-                  nullable: true
-                  description: ネット
-                  properties:
-                    amount:
-                      type: integer
-                      minimum: 1
-                      description: 金額
-                      example: 6000
-                    date:
-                      type: string
-                      description: 支払日
-                      example: "2024-02-01"
-                insurance:
-                  type: object
-                  nullable: true
-                  description: 保険料
-                  properties:
-                    amount:
-                      type: integer
-                      minimum: 1
-                      description: 金額
-                      example: 6000
-                    date:
-                      type: string
-                      description: 支払日
-                      example: "2024-02-01"
-      responses:
-        "200":
-          $ref: "#/components/responses/Ok"
-        "400":
-          $ref: "#/components/responses/BadRequest"
-        "500":
-          $ref: "#/components/responses/InternalServerError"
-
   "/check_place_sum":
     post:
       summary: "金額チェック登録"
